@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2004/10/03 00:12:55 tv Exp $
+# $NetBSD: Makefile,v 1.12 2005/01/12 15:32:00 jlam Exp $
 
 DISTNAME=		algae-4.1.3
 PKGREVISION=		2
@@ -12,7 +12,7 @@ COMMENT=		Interpreted language for numerical analysis
 DEPENDS+=		gnuplot>=3.5:../../graphics/gnuplot
 
 GNU_CONFIGURE=		# defined
-USE_FORTRAN=		# defined
+USE_LANGUAGES=		fortran
 USE_BUILDLINK3=		yes
 USE_GNU_READLINE=	# uses history_truncate_file
 
